--- a/courseProject/src/app/footer/footer.component.css
+++ b/courseProject/src/app/footer/footer.component.css
@@ -1,6 +1,5 @@
-/* Footer Styles */
 .footer {
-    background-color: #333;
+    background-color: #b5125e;
     color: #fff;
     padding: 30px 0;
 }
