--- a/courseProject/src/app/app.component.css
+++ b/courseProject/src/app/app.component.css
@@ -8,9 +8,11 @@
 }
 .content {
     flex: 1;
+    background-color: #081142;
+    width: 100vw;
 }
 .footer {
-    background-color: #333;
+    background-color: #b5125e;
     color: #fff;
     padding: 20px;
     text-align: center;
