--- a/courseProject/src/app/course-details/course-details.component.css
+++ b/courseProject/src/app/course-details/course-details.component.css
@@ -5,12 +5,12 @@
   }
   
   .frontal-icon {
-    background-color: blue;
+    background: url("../../assets/categories icons/img1.jpg");
     /* Frontal mode icon styling */
   }
   
   .zoom-icon {
-    background-color: green;
+    background: url("../../assets/categories icons/img2.jpg");
     /* Zoom mode icon styling */
   }
   
@@ -37,3 +37,46 @@
     height: auto; /* Maintain the aspect ratio of the image */
   }
   
+  .add-course-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 15px 30px;
+    background-color: #4caf50;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+
+   
+  .edit-button {
+    display: block;
+    width: 30vw;
+    margin: 20px;
+    padding: 10px;
+    background-color: #4caf50;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+  
+  
+  .edit-course-overlay {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* Ensure the edit component is above other content */
+    background-color: rgba(255, 255, 255, 0.95); /* Semi-transparent background */
+    padding: 20px;
+    max-height: calc(100vh - 40px); /* Adjust as needed */
+    overflow-y: auto; /* Allow vertical scrolling */
+    width: 50vw;
+  }
+  .round{
+    width: 150px;
+      border-radius: 50px;
+  }
+    
