--- a/courseProject/src/app/login/login.component.css
+++ b/courseProject/src/app/login/login.component.css
@@ -13,14 +13,14 @@
   }
   
   .btn-primary {
-    background-color: #4caf50;
-    border-color: #4caf50;
+    background-color: #b5125e;
+    border-color: #b5125e;
     color: #fff;
   }
   
   .btn-primary:hover {
-    background-color: #45a049;
-    border-color: #45a049;
+    background-color: #b5125e;
+    border-color: #b5125e;
   }
   
   .lecture-button {
