--- a/courseProject/src/app/mini-course-details/mini-course-details.component.html
+++ b/courseProject/src/app/mini-course-details/mini-course-details.component.html
@@ -1,10 +1,11 @@
     <div class="card-body">
+        <img [src]="course.image" alt="{{ course.name }} Image" class="img-fluid mb-3">
         <h3 class="card-title">{{ course.name }}</h3>
+        <img [src]="category.icon" alt="{{ category.name }} Icon" class="img-fluid mb-3 round">
         <p class="card-text">{{ category.name }}</p>
-        <img [src]="category.icon" alt="{{ category.name }} Icon" class="img-fluid mb-3">
         <p class="card-text">Number of Lessons: {{ course.countOfLessons }}</p>
         <p class="card-text">Learning Way: {{ course.learningWay }}</p>
         <span class="learning-mode-icon" [ngClass]="course.learningWay | learningWayIcon"></span>
-        <img [src]="course.image" alt="{{ course.name }} Image" class="img-fluid mb-3">
+    <br />
         <button *ngIf="isConnected" class="btn btn-primary" (click)="goCourseDetails()">See More</button>
     </div>
