--- a/courseProject/src/app/nav-bar/nav-bar.component.html
+++ b/courseProject/src/app/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar color="primary">
-    <span class="brand">My App</span>
+    <span class="brand">A personal moment</span>
     <span class="spacer"></span>
-    <button *ngIf="!isConnected" mat-raised-button color="accent" (click)="login()">Log In</button>
-    <button mat-raised-button color="accent" (click)="register()">Register</button>
-    <button *ngIf="isConnected" mat-raised-button color="accent" (click)="logout()">Log Out</button>
+    <button *ngIf="!isConnected()" mat-raised-button color="accent" (click)="login()">Log In</button>
+    <button *ngIf="isConnected()"mat-raised-button color="accent" (click)="register()">Register</button>
+    <button *ngIf="isConnected()" mat-raised-button color="accent" (click)="logout()">Log Out</button>
     <button mat-raised-button color="accent" (click)="allCourses()">Our Courses</button>
-    <button *ngIf="isLecturer" mat-raised-button color="accent" (click)="addCourse()">Add Course</button>
+    <button *ngIf="isLecturer()" mat-raised-button color="accent" (click)="addCourse()">Add Course</button>
   </mat-toolbar>
