--- a/courseProject/src/app/footer/footer.component.html
+++ b/courseProject/src/app/footer/footer.component.html
@@ -1,10 +1,9 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="company-details">
-            <h2>Company Name</h2>
-            <p>123 Main Street, Cityville, ABC 12345</p>
-            <!-- <p>Email: info@company.com</p> -->
-            <p>Phone: +1 (123) 456-7890</p>
+            <h2>A personal moment</h2>
+            <p>9 Zeev Jabotinsky St</p>
+            <p>072-220-1430</p>
         </div>
         <div class="copyright">
             <p>&copy; 2024 Course Website. All Rights Reserved.</p>
