--- a/courseProject/src/app/home/home.component.css
+++ b/courseProject/src/app/home/home.component.css
@@ -1,23 +1,20 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f5f5f5;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 0 20px;
+.body{
+    width: 100vw;
+    padding: 40 20px;
+    background-image: url("../../assets/home-img.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    height: 75vh;
+    color: white;
 }
 
 .hero-section {
-    /* background-image: url('hero-background.jpg'); */
     background-size: cover;
     background-position: center;
     padding: 100px 0;
     text-align: center;
-    color: #fff;
 }
 
 .hero-section h1 {
@@ -60,9 +57,8 @@ body {
     margin-bottom: 10px;
 }
 
-/* CSS for Header */
 .header {
-    background-color: #007bff;
+    background-color: #081142;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -77,36 +73,8 @@ body {
     font-size: 18px;
 }
 
-/* CSS for Container */
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-/* CSS for Hero Section */
-.hero-section {
-    /* background-image: url('hero-background.jpg'); Replace 'hero-background.jpg' with your image path */
-    background-size: cover;
-    background-position: center;
-    padding: 100px 0;
-    text-align: center;
-    color: #fff;
-}
-
-.hero-section h1 {
-    font-size: 48px;
-    margin-bottom: 20px;
-}
-
-.hero-section p {
-    font-size: 20px;
-    margin-bottom: 40px;
-}
-
-/* CSS for Call-to-Action Button */
 .cta-button {
-    background-color: #ff5a5f;
+    background-color: #870b45;
     color: #fff;
     padding: 10px 20px;
     font-size: 18px;
@@ -117,5 +85,5 @@ body {
 }
 
 .cta-button:hover {
-    background-color: #ff3c3f;
+    background-color: #a10e52;
 }
