--- a/courseProject/src/app/home/home.component.html
+++ b/courseProject/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <p>Unlock Your Potential with Our Comprehensive Courses</p>
 </div>
 
-<div class="container">
+<div class="body"> 
     <section class="hero-section">
         <h1>Learn Anywhere, Anytime</h1>
         <p>Explore our wide range of courses designed to fit your learning needs.</p>
