--- a/courseProject/src/app/all-courses/all-courses.component.html
+++ b/courseProject/src/app/all-courses/all-courses.component.html
@@ -1,20 +1,25 @@
 <div class="container">
-    <!-- Filter Form -->
     <form [formGroup]="filterForm" class="filter-form">
-        <input formControlName="name" class="form-control" placeholder="Course Name" />
-        <select formControlName="category" class="form-control">
-            <option [value]="''">Select a Category</option>
-            <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
-        </select>
-        <div class="learning-way">
-            <label>Learning Way:</label>
-            <label><input type="radio" formControlName="learningWay" [value]="''"> All</label>
-            <label><input type="radio" formControlName="learningWay" [value]="0"> Frontal</label>
-            <label><input type="radio" formControlName="learningWay" [value]="1"> Zoom</label>
+        <div class="row">
+            <div class="col-md-6">
+              <input formControlName="name" class="form-control" placeholder="Search Course Name" />
+            </div>
+            <div class="col-md-6">
+              <select formControlName="category" class="form-control">
+                <option [value]="''">Select a Category</option>
+                <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
+              </select>
+            </div>
+          </div>
+        <div>
+            <div class="learning-way-options">
+                <label class="learning-way-option"><input type="radio" formControlName="learningWay" [value]="''"> All</label>
+                <label class="learning-way-option"><input type="radio" formControlName="learningWay" [value]="0"> Frontal</label>
+                <label class="learning-way-option"><input type="radio" formControlName="learningWay" [value]="1"> Zoom</label>
+            </div>
         </div>
     </form>
-
-    <!-- Course Grid -->
+    
     <div class="course-grid">
         <div *ngFor="let c of filteredCourses" class="course-card">
             <app-mini-course-details [course]='c'></app-mini-course-details>
@@ -22,5 +27,4 @@
     </div>
 </div>
 
-<!-- Add Course Button -->
 <button  *ngIf="isLecturer" class="add-course-button" (click)="goAdd()">Add Course</button>
