--- a/courseProject/src/app/course-details/course-details.component.css
+++ b/courseProject/src/app/course-details/course-details.component.css
@@ -1,40 +1,46 @@
 .learning-mode-icon {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     display: inline-block;
+    vertical-align: middle;
   }
   
   .frontal-icon {
-    background: url("../../assets/categories icons/img1.jpg");
-    /* Frontal mode icon styling */
+    background-image: url(../../assets/learning\ icons/img1.png);
+    background-size: cover;
   }
   
   .zoom-icon {
-    background: url("../../assets/categories icons/img2.jpg");
-    /* Zoom mode icon styling */
+    background-image: url(../../assets/learning\ icons/img2.png);
+    background-size: cover;
   }
   
   .default-icon {
     background-color: gray;
-    /* Default icon styling */
   }
 
   .coming-week {
-    background-color: #f0f8ff; /* Light blue background */
-    border: 2px solid #4682b4; /* Medium blue border */
-    border-radius: 5px; /* Rounded corners */
-    padding: 10px; /* Add some padding for spacing */
+    background-color: #f0f8ff; 
+    border: 2px solid #01233e;
+    border-radius: 5px;
+    padding: 10px;
   }
   
   .coming-week-input {
-    color: #ff6347; /* Red text color */
-    border: 1px solid #ff6347; /* Red border */
-    border-radius: 3px; /* Slightly rounded corners */
-    padding: 5px; /* Add some padding for spacing */
+    color: #870b45;
+    border: 1px solid #870b45;
+    border-radius: 3px;
+    padding: 5px;
   }
-  .course-details-container img {
-    width: 100%; /* Make the image span the entire width of its container */
-    height: auto; /* Maintain the aspect ratio of the image */
+  .img {
+    width: 40vw;
+    height: 40vw;
+    margin-right: 5vw;
+  }
+
+  .course-details-container{
+    display: flex;
+    padding: 10vw;
   }
   
   .add-course-button {
@@ -42,7 +48,7 @@
     bottom: 20px;
     right: 20px;
     padding: 15px 30px;
-    background-color: #4caf50;
+    background-color: #870b45;
     border: none;
     color: #fff;
     cursor: pointer;
@@ -55,7 +61,7 @@
     width: 30vw;
     margin: 20px;
     padding: 10px;
-    background-color: #4caf50;
+    background-color: #081142;
     border: none;
     color: #fff;
     cursor: pointer;
@@ -68,15 +74,30 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1000; /* Ensure the edit component is above other content */
-    background-color: rgba(255, 255, 255, 0.95); /* Semi-transparent background */
+    z-index: 1000;
+    background-color: rgba(255, 255, 255, 0.95);
     padding: 20px;
-    max-height: calc(100vh - 40px); /* Adjust as needed */
-    overflow-y: auto; /* Allow vertical scrolling */
+    max-height: calc(100vh - 40px);
+    overflow-y: auto;
     width: 50vw;
   }
   .round{
-    width: 150px;
-      border-radius: 50px;
+    width: 80px;
+      border-radius: 40px;
+      margin-bottom: 20px;
   }
-    
+
+  .inline{
+    display: inline;
+  }
+
+  .inline-big{
+    display: inline;
+    font-size: 1.5rem;
+    margin: 20px;
+  }
+
+  .tiny{
+    width: 20px;
+    margin-right: 10px;
+  }
