--- a/courseProject/src/app/register/register.component.css
+++ b/courseProject/src/app/register/register.component.css
@@ -1,6 +1,7 @@
 .hashadchan-registration-form {
     max-width: 400px;
     margin: auto;
+    margin-top: 100px;
 }
 
 .form-group {
@@ -13,12 +14,13 @@
 }
 
 .btn-primary {
-    background-color: #4caf50;
-    border-color: #4caf50;
+    background-color: #081142;
+    border-color: #050d3a;
     color: #fff;
+    margin: 10px;
 }
 
 .btn-primary:hover {
-    background-color: #45a049;
-    border-color: #45a049;
+    background-color: #050d3a;
+    border-color: #050d3a;
 }
